# python-packaging

./: Makefile  README.md  pyproject.toml  pyproject_self_contained.toml  requirements-dev.txt
.github/workflows/: main.yml
hello_world/: __init__.py  hello.py  hello_world.py
tests/: test_simple.py
